--- a/src/core/_util.less
+++ b/src/core/_util.less
@@ -1002,8 +1002,9 @@
   -ms-flex-item-align: stretch;
   align-self: stretch;
   > * {
-    -ms-flex-item-align: stretch;
-    align-self: stretch;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
   }
 }
 
@@ -1013,8 +1014,9 @@
     -ms-flex-item-align: stretch;
     align-self: stretch;
     > * {
-      -ms-flex-item-align: stretch;
-      align-self: stretch;
+      -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+      align-items: stretch;
     }
   }
 }
